; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/traceevent/extr_event-parse.c_tep_find_function.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/traceevent/extr_event-parse.c_tep_find_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tep_handle = type { i32 }
%struct.func_map = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @tep_find_function(%struct.tep_handle* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.tep_handle*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.func_map*, align 8
  store %struct.tep_handle* %0, %struct.tep_handle** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.tep_handle*, %struct.tep_handle** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call %struct.func_map* @find_func(%struct.tep_handle* %7, i64 %8)
  store %struct.func_map* %9, %struct.func_map** %6, align 8
  %10 = load %struct.func_map*, %struct.func_map** %6, align 8
  %11 = icmp ne %struct.func_map* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %17

13:                                               ; preds = %2
  %14 = load %struct.func_map*, %struct.func_map** %6, align 8
  %15 = getelementptr inbounds %struct.func_map, %struct.func_map* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %3, align 8
  br label %17

17:                                               ; preds = %13, %12
  %18 = load i8*, i8** %3, align 8
  ret i8* %18
}

declare dso_local %struct.func_map* @find_func(%struct.tep_handle*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
